# sabihin

./: .gitignore  LICENSE  dune-project  index.html  index.js  jest.config.js  package.json  pnpm-lock.yaml  sabihin.opam  sabihin.opam.template  vite.config.js
.github/workflows/: ci.yml
assets/: global.css  index.css  livereload.js
lib/backend/: CSRF.ml  Cipher.ml  Cipher.mli  Dev.ml  HigherOrderHandlers.ml  HigherOrderHandlers.mli  Logging.ml  Logging.mli  Middleware.ml  Page.re  Render.re  Server.ml  Session.ml  Vite.re  dune
lib/backend/Routes/: Api.ml  LiveReload.ml  Pages.ml  Static.ml
lib/backend/Routes/Api/: Api.ml  Login.ml  Logout.ml  Register.ml  Secrets.ml
lib/base64/js/: Base64_ArrayBuffer.ml  Base64_Uint8Array.ml  Base64_js.ml  definitions.atd  dune
lib/components/: README.md
lib/components/js/: FramerMotion.re  HeaderNav.re  HeaderNavLoggedIn.re  Hooks.re  Login.re  Register.re  Validate.re  Zxcvbn.re  dune
lib/components/js/Register/: Register.re  RegisterFinish.re  RegisterForm.re  RegisterGenerate.re  RegisterGenerateState.re  RegisterGenerateStep.re  RegisterHooks.re  RegisterInitial.re  RegisterSubmit.re
lib/components/js/Register/Generate/: RegisterGenerateStep.re
lib/components/js/Register/Hooks/: RegisterGenerateState.re
lib/components/native/: App.re  AuthForm.re  Footer.re  Header.re  HeaderNav.re  HeaderNavGuest.re  HeaderNavLoading.re  Icons.re  Index.re  Layout.re  Login.re  NotFound.re  Profile.re  ProfileUsernameButton.re  dune
lib/contexts/js/: Session.re  SessionStore.re  dune
lib/contexts/native/: Session.re  SessionStore.re  SessionTypes.re  dune
lib/frontend/js/: App.re  FramerMotion.re  Store.re  dune
lib/frontend/js/api/: ApiLogin.re  ApiRegister.re  ApiSecrets.re  dune
lib/frontend/js/contexts/: ClientSecretsContext.re  DerivedSecretsContext.re  GeneratedSecretsContext.re  SessionContext.re  dune
lib/frontend/js/hooks/: SecretsHook.re  Session.re  SessionHook.re  StackHook.re  dune
lib/frontend/js/layout/: HeaderNav.re  HeaderNavHooks.re  HeaderNavLoggedIn.re  HeaderNavLoggedInMedium.re  HeaderNavLoggedInSmall.re  dune
lib/frontend/js/pages/: GetStartedPage.re  GetStartedPageGenerate.re  GetStartedPageGenerateHooks.re  GetStartedPageGenerateLogs.re  GetStartedPageHooks.re  GetStartedPageQuickActions.re  InboxPage.re  InboxPageMessages.re  InboxPageMessagesCard.re  InboxPageMessagesCardHooks.re  InboxPageMessagesStyles.re  LoginPageHooks.re  RegisterPageGenerate.re  RegisterPageGenerateHooks.re  RegisterPageHooks.re  WritePageEditor.re  WritePageHooks.re  dune
lib/frontend/js/types/: client_types.atd  dune
lib/frontend/universal/: App.re  Content.re  Footer.re  Header.re  HeaderGetStarted.re  HeaderNav.re  HeaderNavGuest.re  HeaderNavLoading.re  HeaderNavLoggedIn.re  HeaderTitle.re  Icons.re  Layout.re  Link.re  Router.re  Store.re  Theme.re  dune
lib/frontend/universal/api/: ApiCore.re
lib/frontend/universal/contexts/: ServerUrl.re  SessionContext.re
lib/frontend/universal/hooks/: Session.re
lib/frontend/universal/layout/: Footer.re  Header.re  HeaderNavLoading.re
lib/frontend/universal/pages/: GetStartedPage.re  GetStartedPageInitial.re  GetStartedPageLayout.re  InboxPage.re  InboxPageLayout.re  IndexPage.re  IndexPageBanner.re  IndexPageCards.re  LoginPage.re  LoginPageFieldPassword.re  LoginPageHooks.re  NotFoundPage.re  RegisterPage.re  RegisterPageFieldConfirm.re  RegisterPageFieldCore.re  RegisterPageFieldPassword.re  RegisterPageFieldUsername.re  RegisterPageForm.re  RegisterPageGenerate.re  RegisterPageHooks.re  RegisterPageHooksCore.re  RegisterPageLayout.re  WritePage.re  WritePageEditor.re  WritePageEditorInitial.re  WritePageHooks.re  WritePageStyles.re
lib/models/: Extra.ml  Extra.mli  Initialize.ml  Initialize.mli  Models.ml  PrivateKeys.ml  PrivateKeys.mli  PublicKeys.ml  PublicKeys.mli  Secrets.ml  Secrets.mli  User.ml  User.mli  Utils.ml  Utils.mli  dune
lib/models/Extra/: Nanoid.ml  Nanoid.mli
lib/promise_syntax/: Promise_syntax.re  dune
lib/subscribers/js/: Subscribers_js.ml  Subscribers_js.mli  dune
lib/subscribers/native/: Subscribers_native.ml  Subscribers_native.mli  dune
lib/toolbox/: Database.ml  Database.mli  dune
lib/types/: definitions.atd  defs.atd  register.atd
lib/types/js/: Dynamic.re  dune
lib/types/native/: Dynamic.ml  dune
lib/types/universal/: dune
lib/validation/js/: ValidationPassword.re  ValidationPasswordBasic.re  ValidationPasswordConfirm.re  dune
lib/validation/universal/: ValidationCore.re  ValidationResult.re  ValidationUsername.re  dune
lib/vault/: PromiseUtil.re  Salt.re  Vault.re  Vault_js.re  dune
lib/vault/js/: ClientRandom.re  Salt.re  TextDecoder.re  TextEncoder.re  Vault_js.re  WebCrypto.re  dune
lib/vault/keys/: DerivedKeyInternal.re  DerivedKeyInternal.rei  EphemeralKeyInternal.re  EphemeralKeyInternal.rei  MasterKeyInternal.re  MasterKeyInternal.rei  OperationsInternal.re  ProtectionKeysInternal.re  ProtectionKeysInternal.rei  VerificationKeysInternal.re
lib/vault/native/: Salt.ml  dune
public/: fonts.css  global.css
src/backend/: Api.ml  Backend.ml  Backend.re  Middleware.ml  Page.re  Pages.re  dune
src/backend-lib/: Api.ml  Server.ml  dune
src/backend-lib/Routes/: Index.ml  Static.mli
src/components/: README.md
src/components/js/: AuthForm.re  Login.re  Register.re  Validate.re  Vault.re  Zxcvbn.re  dune
src/components/native/: App.re  AuthCore.re  AuthForm.re  Counter.re  Footer.re  Header.re  Icons.re  (+6 more)
src/vault/: Vault.re
test/: VaultTest.re  dune  index.js  index.t
test/backend/: Backend_test.ml  Login_Api_test.ml  Register_Api_test.ml  Routes_Api_test.ml  Secrets_Api_test.ml  Utils.ml  dune
test/js/: VaultTest.re  dune  index.js  index.t
test/models/: Models_test.ml  Nanoid_test.ml  PrivateKey.ml  PrivateKeys.ml  PrivateKeys_test.ml  PublicKeys_test.ml  Secrets_test.ml  User.ml  User_test.ml  Utils.ml  Utils.mli  dune
test/subscribers/: Subscribers_native_test.ml  dune
test/toolbox/: Test_toolbox.ml  Test_toolbox.mli  dune
test/vault/: Test_vault.ml  Vault_test.ml  dune
(+19 files in other folders)
