(include_subdirs qualified)

(library
 (name backend_lib)
 (public_name sabihin.backend)
 (modes native)
 (libraries
  caqti-driver-postgresql
  components_native
  dream
  models
  server-reason-react.react
  server-reason-react.reactDom
  yojson)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv server-reason-react.ppx)))
