(include_subdirs qualified)

(library
 (name backend_lib)
 (public_name sabihin.backend)
 (modes native)
 (libraries
  caqti-driver-postgresql
  frontend_lib_universal
  dream
  models
  server-reason-react.react
  server-reason-react.reactDom
  types_native
  yojson)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv server-reason-react.ppx)))
