(executable
 (name backend)
 (public_name backend)
 (modes native)
 (libraries
  components_native
  dream
  server-reason-react.react
  server-reason-react.reactDom
  yojson)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv server-reason-react.ppx)))

(rule
 (alias backend)
 (deps ./backend.exe)
 (action
  (bash "date > %{project_root}/../last_built.txt")))
