(include_subdirs unqualified)

(library
 (name components_js)
 (modes melange)
 (wrapped false)
 (libraries reason-react vault_js melange.belt melange-fetch)
 (preprocess
  (pps melange.ppx reason-react-ppx server-reason-react.browser_ppx -js)))

(copy_files#
 (mode fallback)
 (files "../native/**.{re,rei}"))
