(include_subdirs unqualified)

(library
 (name components_js)
 (modes melange)
 (wrapped false)
 (libraries
  reason-react
  melange.belt
  melange-fetch
  contexts_js
  types_js
  validation_js
  vault_js)
 (preprocess
  (pps melange.ppx reason-react-ppx server-reason-react.browser_ppx -js)))

(copy_files#
 (mode fallback)
 (files "../native/**.{re,rei}"))
