(include_subdirs unqualified)

(library
 (name components_native)
 (public_name sabihin.components_native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt)
 (wrapped false)
 (preprocess
  (pps
   server-reason-react.ppx
   server-reason-react.browser_ppx
   server-reason-react.melange_ppx)))
