(library
 (name contexts_native)
 (public_name sabihin.contexts_native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  server-reason-react.js
  server-reason-react.belt
  server-reason-react.webapi
  validation_universal)
 (wrapped false)
 (preprocess
  (pps
   server-reason-react.ppx
   server-reason-react.browser_ppx
   server-reason-react.melange_ppx)))
