(include_subdirs unqualified)

(library
 (name frontend_lib_js)
 (modes melange)
 (wrapped false)
 (libraries
  melange-fetch
  reason-react
  styled-ppx.css
  styled-ppx.emotion
  subscribers_js
  types_js
  types_universal
  validation_js
  vault_js)
 (preprocess
  (pps styled-ppx melange.ppx reason-react-ppx)))

(copy_files#
 (mode fallback)
 (files "../universal/**.{re,rei}"))
