(library
 (name types_js)
 (modes melange)
 (libraries melange-atdgen-codec-runtime))

(copy_files
 (files "../*.{atd}"))

(rule
 (targets register_t.ml register_t.mli)
 (deps register.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets register_bs.ml register_bs.mli)
 (deps register.atd)
 (action
  (run atdgen -bs %{deps})))
