(library
 (name types_js)
 (modes melange)
 (libraries melange-atdgen-codec-runtime melange.js))

(copy_files
 (files "../*.{atd}"))

(rule
 (targets defs_t.ml defs_t.mli)
 (deps defs.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets defs_bs.ml defs_bs.mli)
 (deps defs.atd)
 (action
  (run atdgen -bs %{deps})))
