(library
 (name types_native)
 (public_name sabihin.types_native)
 (libraries atdgen melange.js))

(copy_files
 (files "../*.{atd}"))

(rule
 (targets defs_t.ml defs_t.mli)
 (deps defs.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets defs_j.ml defs_j.mli)
 (deps defs.atd)
 (action
  (run atdgen -j -j-std %{deps})))
