(library
 (name types_native)
 (public_name sabihin.types_native)
 (modes native)
 (libraries atdgen types_universal yojson))

(copy_files
 (files "../*.{atd}"))

(rule
 (targets definitions_j.ml definitions_j.mli)
 (deps definitions.atd)
 (action
  (run atdgen -open "Types_universal" -j -j-std %{deps})))
